[gd_scene load_steps=12 format=3 uid="uid://cftyk4aww2w5d"]

[ext_resource type="PackedScene" uid="uid://ptdko4gle2ye" path="res://player.tscn" id="1_rje2t"]
[ext_resource type="Script" path="res://main.gd" id="1_rwkye"]
[ext_resource type="Texture2D" uid="uid://6ixshqtk2ep1" path="res://assets/grass.png" id="1_ywi63"]
[ext_resource type="PackedScene" uid="uid://dglq0007q243a" path="res://coins.tscn" id="2_7or2u"]
[ext_resource type="PackedScene" uid="uid://djjlarlh1ewmk" path="res://powerup.tscn" id="3_wtgoi"]
[ext_resource type="PackedScene" uid="uid://3yfkg30chn6o" path="res://cactus.tscn" id="4_w0f54"]
[ext_resource type="PackedScene" uid="uid://vae0solfd06d" path="res://hud.tscn" id="5_ewqre"]
[ext_resource type="AudioStream" uid="uid://bjmrrk77pt0qq" path="res://assets/audio/Coin.wav" id="6_40ou4"]
[ext_resource type="AudioStream" uid="uid://bargk63phvyaf" path="res://assets/audio/Level.wav" id="7_8yqee"]
[ext_resource type="AudioStream" uid="uid://d1k1a8gjpxu86" path="res://assets/audio/EndSound.wav" id="8_npdtt"]
[ext_resource type="AudioStream" uid="uid://xmvubqhoeqx8" path="res://assets/audio/Powerup.wav" id="9_7jwkw"]

[node name="Main" type="Node"]
script = ExtResource("1_rwkye")
coin_scene = ExtResource("2_7or2u")
playtime = 20
powerup_scene = ExtResource("3_wtgoi")
cactus_scene = ExtResource("4_w0f54")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ywi63")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("1_rje2t")]

[node name="GameTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource("5_ewqre")]

[node name="CoinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_40ou4")

[node name="LevelSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_8yqee")

[node name="EndSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_npdtt")

[node name="PowerUpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_7jwkw")

[node name="PowerupTimer" type="Timer" parent="."]
one_shot = true

[connection signal="hurt" from="Player" to="." method="_on_player_hurt"]
[connection signal="pickup" from="Player" to="." method="_on_player_pickup"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
[connection signal="timeout" from="PowerupTimer" to="." method="_on_powerup_timer_timeout"]
